sas-core/main/default/objects/FCS_Passenger__x/FCS_Passenger__x.object-meta.xml
<CustomObject>
    <description>Represent a passenger related to a booking in an external system</description>
    <externalDataSource>SAS_External_Systems</externalDataSource>
    <externalName>Passengers</externalName>
    <label>Passenger</label>
    <pluralLabel>Passengers</pluralLabel>
</CustomObject>