sas-core/main/default/objects/FCS_Passenger__x/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <description>Booking to which the passenger is related</description>
    <externalDeveloperName>booking</externalDeveloperName>
    <inlineHelpText>Booking to which the passenger is related</inlineHelpText>
    <label>Booking</label>
    <length>255</length>
    <referenceTo>FCS_Booking__x</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>ExternalLookup</type>
</CustomField>