sas-core/main/default/objects/FCS_Passenger__x/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of passenger</description>
    <externalDeveloperName>email</externalDeveloperName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>