sas-core/main/default/objects/FCS_Passenger__x/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First Name of passenger</description>
    <externalDeveloperName>firstName</externalDeveloperName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>