sas-core/main/default/objects/FCS_Passenger__x/fields/FrequentFlyer__c.field-meta.xml
<CustomField>
    <fullName>FrequentFlyer__c</fullName>
    <description>Frequent Flyer (EuroBonus account) related to booking</description>
    <externalDeveloperName>frequentFlyer</externalDeveloperName>
    <inlineHelpText>Frequent Flyer (EuroBonus account) related to booking</inlineHelpText>
    <label>Frequent Flyer</label>
    <length>255</length>
    <referenceTo>FCS_FrequentFlyer__x</referenceTo>
    <relationshipLabel>Passengers</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <type>ExternalLookup</type>
</CustomField>