sas-core/main/default/objects/FCS_Passenger__x/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last Name of passenger</description>
    <externalDeveloperName>lastName</externalDeveloperName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>