sas-core/main/default/objects/FCS_Passenger__x/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile number of passenger</description>
    <externalDeveloperName>mobile</externalDeveloperName>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>