sas-core/main/default/objects/FCS_Passenger__x/fields/TicketNumber__c.field-meta.xml
<CustomField>
    <fullName>TicketNumber__c</fullName>
    <description>Ticket Number for passenger on related booking</description>
    <externalDeveloperName>eticket</externalDeveloperName>
    <label>Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>