sas-core/main/default/objects/FCS_Passenger__x/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of passenger</description>
    <externalDeveloperName>title</externalDeveloperName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>