sas-core/main/default/objects/FCS_Passenger__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of passenger, e.g. adult or child</description>
    <externalDeveloperName>type</externalDeveloperName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>